--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,8 +48,12 @@
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/users/edit">Dummy Edit Profile Link</a></li>
-          <li><a href="/users/sign_out" data-method="delete" rel="nofollow">Dummy Sign Out Link</a></li>
+          <% if user_signed_in? %>
+          <li><a href="/users/edit">Edit Profile</a></li>
+          <% end %>
+          <% if user_signed_in? %>
+          <li><a href="/users/sign_out" data-method="delete" rel="nofollow">Sign Out</a></li>
+          <% end %>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div>
