--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -10,7 +10,7 @@
     <table class="table table-striped table-hover">
       <tr>
         <th>Site</th>
-        <th>@ Hospital</th>
+        <th>Hospital</th>
         <th>Phone</th>
         <th>Actions</th>
       </tr>
