--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -6,7 +6,7 @@
   <div class="col-md-12">
     <dl class="dl-horizontal">
       <dt>Hospital</dt>
-      <dd><%= @site.hospital_id %></dd>
+      <dd><%= @site.hospital.name %></dd>
 
       <dt>Phone</dt>
       <dd><%= @site.phone %></dd>
