--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,37 +3,38 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <%= f.email_field :email, autofocus: true, :class => "form-control" %>
   </div>
 
   <div class="form-group">
-    <%= f.label :role %>
-    <%= f.select :role, ["Radiologist", "Tech", "Doctor"], :class => "form-control" %>
+    <%= f.label :password %>
+    <% if @minimum_password_length %>
+    <em>(<%= @minimum_password_length %> character minimum)</em>
+    <% end %><br />
+    <%= f.password_field :password, autocomplete: "off", :class =>"form-control" %>
   </div>
 
-  <div class="field">
-    <%= f.label :site_id %><br />
-    <%= f.collection_select :site_id, Site.all, :id, :name %>
+  <div class="form-group">
+    <%= f.label :password_confirmation %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "off", :class => "form-control" %>
   </div>
 
-  <div class="actions">
+  <div class="form-group">
+    <%= f.label :role %> <br />
+    <%= f.select :role, ["Radiologist", "Tech", "Ordering Doctor"], :prompt => "Select", :class => "form-control" %>
+  </div>
+
+<!--   <div class="form-group">
+    <%#= f.label :site_id %><br />
+    <%#= f.collection_select :site_id, Site.all, :id, :name, :class => "form-control" %>
+  </div>
+-->
+
+  <div class="btn btn-default btn-lg btn-block active">
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<%#= render "devise/shared/links" %>
