--- a/app/views/hospitals/edit.html.erb
+++ b/app/views/hospitals/edit.html.erb
@@ -31,7 +31,8 @@
         Update Hospital
       </button>
       or
-      <a href="/hospitals/<%= @hospital.id %>">Cancel</a>
+      <a href="/hospitals">Cancel</a>
+      <!-- <a href="/hospitals/<%#= @hospital.id %>">Cancel</a> -->
     </form>
   </div>
 </div>
