--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -9,22 +9,24 @@
   <div class="col-md-12">
     <table class="table table-striped table-hover">
       <tr>
-        <th>Site</th>
         <th>Hospital</th>
+        <th>Site</th>
         <th>Phone</th>
         <th>Actions</th>
       </tr>
 
       <% @sites.each do |site| %>
       <tr>
-        <td><%= site.name %></td>
         <td><%= site.hospital.name %></td>
+        <td><%= site.name %></td>
         <td><%= site.phone %></td>
 
         <td>
           <a href="/sites/<%= site.id %>" class="btn btn-primary">Show</a>
-          <a href="/sites/<%= site.id %>/edit" class="btn btn-warning">Edit</a>
-          <a href="/delete_site/<%= site.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
+          <% if current_user.role == "Radiologist" %>
+            <a href="/sites/<%= site.id %>/edit" class="btn btn-warning">Edit</a>
+            <a href="/delete_site/<%= site.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
+          <% end %>
         </td>
       </tr>
       <% end %>
