--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -9,25 +9,26 @@
   <div class="col-md-12">
     <table class="table table-striped table-hover">
       <tr>
-        <th>Created at</th>
+        <th>Time</th>
         <th>From</th>
         <th>Site</th>
+        <th>Hospital</th>
         <th>Header</th>
-        <th>Body</th>
         <th>Actions</th>
       </tr>
 
       <% @messages.each do |message| %>
       <tr>
-        <td><%= message.created_at %></td>
+        <td><%= message.created_at.strftime("%I:%M%p") %></td>
         <td><%= message.user.email %></td>
         <td><%= message.site.name %></td>
+        <td><%= message.site.hospital.name %></td>
         <td><%= message.header %></td>
-        <td><%= message.body %></td>
         <td>
-          <a href="/messages/<%= message.id %>" class="btn btn-primary">Show</a>
-          <!--<a href="/messages/<%= message.id %>/edit" class="btn btn-warning">Edit</a> -->
-          <a href="/delete_message/<%= message.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
+          <a href="/messages/<%= message.id %>" class="btn btn-primary btn-xs">Show</a>
+          <% if current_user.role == "Radiologist" %>
+            <a href="/delete_message/<%= message.id %>" class="btn btn-danger btn-xs" rel="nofollow">Delete</a>
+          <% end %>
         </td>
       </tr>
       <% end %>
