--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -5,16 +5,24 @@
 <div class="row">
   <div class="col-md-12">
     <dl class="dl-horizontal">
-      <dt>User</dt>
-      <dd><%= @message.user_id %></dd>
+      <dt>From:</dt>
+      <dd><%= @message.user.email %></dd>
+      <dt>Time:</dt>
+      <dd><%= @message.created_at.strftime("%I:%M%p") %> on <%= @message.created_at.strftime("%A") %>&nbsp;<%=@message.created_at.strftime("%D")%></dd>
 
-      <dt>Site</dt>
-      <dd><%= @message.site_id %></dd>
+      <dt>Site:</dt>
+      <dd><%= @message.site.name %></dd>
 
-      <dt>Header</dt>
+      <dt>Hospital:</dt>
+      <dd><%= @message.site.hospital.name %></dd>
+
+      <dt>Contact:</dt>
+      <dd><%= @message.site.phone %></dd>
+
+      <dt>Header:</dt>
       <dd><%= @message.header %></dd>
 
-      <dt>Body</dt>
+      <dt>Body:</dt>
       <dd><%= @message.body %></dd>
 
     </dl>
@@ -23,12 +31,14 @@
       <a href="/messages" class="btn btn-primary">
         Back
       </a>
-      <a href="/messages/<%= @message.id %>/edit" class="btn btn-warning">
+<!--       <a href="/messages/<%#= @message.id %>/edit" class="btn btn-warning">
         Edit
-      </a>
-      <a href="/delete_message/<%= @message.id %>" class="btn btn-danger" rel="nofollow">
+      </a> -->
+      <% if current_user.role == "Radiologist" %>
+       <a href="/delete_message/<%= @message.id %>" class="btn btn-danger" rel="nofollow">
         Delete
       </a>
+      <% end %>
     </div>
   </div>
 </div>
